After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 645629 - Some public symbols are missing for libpeas
Some public symbols are missing for libpeas
Status: RESOLVED FIXED
Product: seed
Classification: Bindings
Component: libseed
2.91.x
Other Linux
: Normal normal
: ---
Assigned To: seed-maint
Depends on:
Blocks:
 
 
Reported: 2011-03-23 21:50 UTC by Steve Frécinaux
Modified: 2011-04-01 16:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Expose seed_value_to_gvalue (6.46 KB, patch)
2011-03-25 19:15 UTC, Garrett Regier
none Details | Review
Expose seed_value_(to|from)_gi_argument (8.48 KB, patch)
2011-03-25 19:15 UTC, Garrett Regier
none Details | Review

Description Steve Frécinaux 2011-03-23 21:50:40 UTC
The following symbols are exported by the seed library but are marked as private. Anyhow, libpeas would make good use of them or a similar feature.

This symbol handling GValues looks clean and is already used by libpeas 0.7 (shame!)

gboolean seed_gvalue_from_seed_value (SeedContext    ctx,
                                      SeedValue      val,
                                      GType          type,
                                      GValue        *gval,
                                      SeedException *exception);


The following ones have a more "private" look so we didn't use them yet despite we have a patch doing so: GIArgument <-> JSValue

gboolean seed_gi_make_argument       (SeedContext    ctx,
                                      SeedValue      value,
                                      GITypeInfo    *type_info,
                                      GIArgument    *arg,
                                      SeedException *exception);
SeedValue seed_gi_argument_make_js   (SeedContext    ctx,
                                      GIArgument    *arg,
                                      GITypeInfo    *type_info,
                                      SeedException *exception);


Maybe they should get exported publicly with a name such as seed_gi_argument_from_seed_value() and seed_gi_argument_to_seed_value() or something ?
Comment 1 Garrett Regier 2011-03-25 19:15:12 UTC
Created attachment 184202 [details] [review]
Expose seed_value_to_gvalue
Comment 2 Garrett Regier 2011-03-25 19:15:36 UTC
Created attachment 184203 [details] [review]
Expose seed_value_(to|from)_gi_argument
Comment 3 Alan Knowles 2011-03-29 07:55:28 UTC
These look good to go. can you commit them in.
Comment 4 Garrett Regier 2011-03-29 14:58:31 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
Comment 5 Steve Frécinaux 2011-03-29 15:00:31 UTC
Do you have an idea when this patch will make it to a released version of libpeas?
Could you make a release soon so we can have a RC of libpeas out depending on that seed version.
Comment 6 Alan Knowles 2011-03-31 07:55:10 UTC
Tim's the one who releases - might be worth giving him a nudge. (he should be on the cc list on this bug)
Comment 7 Steve Frécinaux 2011-03-31 18:31:06 UTC
Tim, could you please make a release? I'm blocking on it to be able to make a new release of libpeas...
Comment 8 Tim Horton 2011-04-01 16:01:45 UTC
Will do, later today.