Use new seed API to convert SeedValue to and from GIArgument

https://bugzilla.gnome.org/show_bug.cgi?id=645629
https://bugzilla.gnome.org/show_bug.cgi?id=646332